--- a/selected-topics/03-high-performance-python/notebook.ipynb
+++ b/selected-topics/03-high-performance-python/notebook.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,15 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "78.5 µs ± 4.68 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
-      "9.28 µs ± 71.6 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "69.1 µs ± 1.44 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "8.87 µs ± 302 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,19 +163,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... started on input parameter 1\n",
       "... started on input parameter 0\n",
+      "... started on input parameter 1\n",
       "... started on input parameter 2\n",
       "... finished input parameter 0\n",
-      "... finished input parameter 1\n",
-      "... finished input parameter 2\n"
+      "... finished input parameter 2\n",
+      "... finished input parameter 1\n"
      ]
     }
    ],
@@ -199,24 +199,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We need to prepare a container for communication.\n",
+    "# We need to prepare a container for communication. One\n",
+    "# alternative is to derine a shared variable.\n",
     "qout = mp.Queue()\n",
     "\n",
+    "# We can partial out most function arguments\n",
     "task_partial = partial(task_mp_queue, num_outer, num_inner, qout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2791831519566242, 0.4691635591850568, 0.009084340128113134]\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
     "# We can prepare our work.\n",
     "processes = []\n",
     "for which in range(3):\n",
@@ -243,9 +251,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "... started on input parameter 0\n",
+      "... started on input parameter 1\n",
+      "... started on input parameter 2\n",
+      "... finished input parameter 0\n",
+      "... finished input parameter 2\n",
+      "... finished input parameter 1\n"
+     ]
+    }
+   ],
    "source": [
     "task_partial = partial(task_mp_no_communication, num_outer, num_inner)\n",
     "\n",
@@ -258,9 +279,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "working on main effect for input 1\n",
+      "working on main effect for input 2\n",
+      "working on main effect for input 0\n",
+      "working on total effect for input 1\n",
+      "working on total effect for input 0\n",
+      "working on total effect for input 2\n"
+     ]
+    }
+   ],
    "source": [
     "task_partial = partial(task_mp_management, num_outer, num_inner)\n",
     "\n",
@@ -271,17 +305,6 @@
     "\n",
     "pool.close()\n",
     "pool.join()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## References\n",
-    "\n",
-    "* https://www.journaldev.com/15631/python-multiprocessing-example#python-multiprocessing-process-queue-and-locks\n",
-    "\n",
-    "* https://pymotw.com/2/multiprocessing/basics.html"
    ]
   }
  ],
