--- a/selected-topics/03-high-performance-python/notebook.ipynb
+++ b/selected-topics/03-high-performance-python/notebook.ipynb
@@ -4,17 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# High-performance computing in Python\n",
-    "\n",
-    "\n",
-    "### Missing\n",
-    "\n",
-    "* Numba"
+    "# High-performance computing in Python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +20,10 @@
     "import os\n",
     "\n",
     "sys.path.insert(0, \"../02-sensitivity-analysis/python\")\n",
-    "sys.path.insert(0, \"python\")\n",
+    "sys.path.insert(0, \"src\")\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "from numpy import f2py\n",
     "import numpy as np\n",
     "\n",
     "from ishigami import compute_simulation_total_effect\n",
@@ -35,18 +31,12 @@
     "from ishigami import evaluate_ishigami_readable\n",
     "from ishigami import evaluate_ishigami\n",
     "\n",
+    "from auxiliary import evaluate_ishigami_readable_loop\n",
+    "from auxiliary import evaluate_ishigami_numba_loop\n",
     "from auxiliary import task_mp_no_communication\n",
-    "from auxiliary import evaluate_ishigami_loop\n",
     "from auxiliary import task_mp_management\n",
     "from auxiliary import task_mp_queue\n",
     "from functools import partial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Vectorization"
    ]
   },
   {
@@ -58,11 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_draws = 10\n",
+    "num_draws = 1000\n",
     "inputs = np.random.uniform(low=-np.pi, high=np.pi, size=(num_draws, 3))"
    ]
   },
@@ -70,25 +60,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use some build-in functionality for some basic benchmarking."
+    "## Pure Python and peformand scientific libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69.1 µs ± 1.44 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
-      "8.87 µs ± 302 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "9.44 ms ± 2.52 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "144 µs ± 8.91 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit evaluate_ishigami_loop(inputs)\n",
+    "np.testing.assert_almost_equal(evaluate_ishigami_readable_loop(inputs), evaluate_ishigami(inputs))\n",
+    "\n",
+    "%timeit evaluate_ishigami_readable_loop(inputs)\n",
     "%timeit evaluate_ishigami(inputs)"
    ]
   },
@@ -96,69 +88,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to set up tests wherever possible."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.testing.assert_equal(evaluate_ishigami_loop(inputs), evaluate_ishigami(inputs))"
+    "## Compilation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiprocessing\n",
-    "We first want to get a sense how many CPU's we have available."
+    "* just-in-time "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of cpu : 4\n"
+      "7.44 ms ± 492 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "41.8 µs ± 321 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Number of cpu : {mp.cpu_count()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# show groups of processes working on total and main effects., mpi worker setup nicely done as well as task differs."
+    "np.testing.assert_almost_equal(evaluate_ishigami_numba_loop(inputs), evaluate_ishigami(inputs))\n",
+    "\n",
+    "%timeit evaluate_ishigami_readable_loop(inputs)\n",
+    "%timeit evaluate_ishigami_numba_loop(inputs)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## mp.Process\n",
-    "\n",
-    "* without communication"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_outer = num_inner = 100\n",
-    "task_partial = partial(task_mp_no_communication, num_outer, num_inner)"
+    "* ahead-of-time"
    ]
   },
   {
@@ -170,15 +135,155 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... started on input parameter 0\n",
-      "... started on input parameter 1\n",
-      "... started on input parameter 2\n",
-      "... finished input parameter 0\n",
-      "... finished input parameter 2\n",
-      "... finished input parameter 1\n"
+      "running build\n",
+      "running config_cc\n",
+      "unifing config_cc, config, build_clib, build_ext, build commands --compiler options\n",
+      "running config_fc\n",
+      "unifing config_fc, config, build_clib, build_ext, build commands --fcompiler options\n",
+      "running build_src\n",
+      "build_src\n",
+      "building extension \"ishigami_f2py\" sources\n",
+      "f2py options: []\n",
+      "f2py:> /tmp/tmpmylg8e26/src.linux-x86_64-3.7/ishigami_f2pymodule.c\n",
+      "creating /tmp/tmpmylg8e26/src.linux-x86_64-3.7\n",
+      "Reading fortran codes...\n",
+      "\tReading file '/tmp/tmpugnkm51p.f90' (format:free)\n",
+      "Post-processing...\n",
+      "\tBlock: ishigami_f2py\n",
+      "\t\t\tBlock: evalute_ishigami_f2py\n",
+      "Post-processing (stage 2)...\n",
+      "Building modules...\n",
+      "\tBuilding module \"ishigami_f2py\"...\n",
+      "\t\tCreating wrapper for Fortran subroutine \"evalute_ishigami_f2py\"(\"evalute_ishigami_f2py\")...\n",
+      "\t\tConstructing wrapper function \"evalute_ishigami_f2py\"...\n",
+      "\t\t  rslt = evalute_ishigami_f2py(inputs,num_evals)\n",
+      "\tWrote C/API module \"ishigami_f2py\" to file \"/tmp/tmpmylg8e26/src.linux-x86_64-3.7/ishigami_f2pymodule.c\"\n",
+      "\tFortran 77 wrappers are saved to \"/tmp/tmpmylg8e26/src.linux-x86_64-3.7/ishigami_f2py-f2pywrappers.f\"\n",
+      "  adding '/tmp/tmpmylg8e26/src.linux-x86_64-3.7/fortranobject.c' to sources.\n",
+      "  adding '/tmp/tmpmylg8e26/src.linux-x86_64-3.7' to include_dirs.\n",
+      "copying /home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib/python3.7/site-packages/numpy/f2py/src/fortranobject.c -> /tmp/tmpmylg8e26/src.linux-x86_64-3.7\n",
+      "copying /home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib/python3.7/site-packages/numpy/f2py/src/fortranobject.h -> /tmp/tmpmylg8e26/src.linux-x86_64-3.7\n",
+      "  adding '/tmp/tmpmylg8e26/src.linux-x86_64-3.7/ishigami_f2py-f2pywrappers.f' to sources.\n",
+      "build_src: building npy-pkg config files\n",
+      "running build_ext\n",
+      "customize UnixCCompiler\n",
+      "C compiler: /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-cc -Wno-unused-result -Wsign-compare -DNDEBUG -fwrapv -O2 -Wall -Wstrict-prototypes -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -pipe -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -pipe -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -DNDEBUG -D_FORTIFY_SOURCE=2 -O2 -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -fPIC\n",
+      "\n",
+      "creating /tmp/tmpxpese1j_/tmp\n",
+      "creating /tmp/tmpxpese1j_/tmp/tmpxpese1j_\n",
+      "compile options: '-MMD -MF /tmp/tmpxpese1j_/file.c.d -c'\n",
+      "x86_64-conda_cos6-linux-gnu-cc: /tmp/tmpxpese1j_/file.c\n",
+      "customize UnixCCompiler using build_ext\n",
+      "get_default_fcompiler: matching types: '['gnu95', 'intel', 'lahey', 'pg', 'absoft', 'nag', 'vast', 'compaq', 'intele', 'intelem', 'gnu', 'g95', 'pathf95', 'nagfor']'\n",
+      "customize Gnu95FCompiler\n",
+      "Found executable /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-gfortran\n",
+      "Found executable /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-ld\n",
+      "Found executable /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-ar\n",
+      "Found executable /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-ranlib\n",
+      "customize Gnu95FCompiler\n",
+      "customize Gnu95FCompiler using build_ext\n",
+      "building 'ishigami_f2py' extension\n",
+      "compiling C sources\n",
+      "C compiler: /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-cc -Wno-unused-result -Wsign-compare -DNDEBUG -fwrapv -O2 -Wall -Wstrict-prototypes -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -pipe -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -pipe -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -DNDEBUG -D_FORTIFY_SOURCE=2 -O2 -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -fPIC\n",
+      "\n",
+      "creating /tmp/tmpmylg8e26/tmp\n",
+      "creating /tmp/tmpmylg8e26/tmp/tmpmylg8e26\n",
+      "creating /tmp/tmpmylg8e26/tmp/tmpmylg8e26/src.linux-x86_64-3.7\n",
+      "compile options: '-I/tmp/tmpmylg8e26/src.linux-x86_64-3.7 -I/home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib/python3.7/site-packages/numpy/core/include -I/home/peisenha/.local/share/anaconda3/envs/teaching-talks/include/python3.7m -c'\n",
+      "x86_64-conda_cos6-linux-gnu-cc: /tmp/tmpmylg8e26/src.linux-x86_64-3.7/fortranobject.c\n",
+      "x86_64-conda_cos6-linux-gnu-cc: /tmp/tmpmylg8e26/src.linux-x86_64-3.7/ishigami_f2pymodule.c\n",
+      "compiling Fortran sources\n",
+      "Fortran f77 compiler: /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-gfortran -Wall -g -ffixed-form -fno-second-underscore -fPIC -fopenmp -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -O3 -funroll-loops\n",
+      "Fortran f90 compiler: /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-gfortran -Wall -g -fno-second-underscore -fPIC -fopenmp -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -O3 -funroll-loops\n",
+      "Fortran fix compiler: /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-gfortran -Wall -g -ffixed-form -fno-second-underscore -Wall -g -fno-second-underscore -fPIC -fopenmp -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -O3 -funroll-loops\n",
+      "compile options: '-I/tmp/tmpmylg8e26/src.linux-x86_64-3.7 -I/home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib/python3.7/site-packages/numpy/core/include -I/home/peisenha/.local/share/anaconda3/envs/teaching-talks/include/python3.7m -c'\n",
+      "x86_64-conda_cos6-linux-gnu-gfortran:f90: /tmp/tmpugnkm51p.f90\n",
+      "x86_64-conda_cos6-linux-gnu-gfortran:f77: /tmp/tmpmylg8e26/src.linux-x86_64-3.7/ishigami_f2py-f2pywrappers.f\n",
+      "/home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-gfortran -Wall -g -Wall -g -shared -Wl,-O2 -Wl,--sort-common -Wl,--as-needed -Wl,-z,relro -Wl,-z,now -Wl,--disable-new-dtags -Wl,--gc-sections -Wl,-rpath,/home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib -Wl,-rpath-link,/home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib -L/home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib /tmp/tmpmylg8e26/tmp/tmpmylg8e26/src.linux-x86_64-3.7/ishigami_f2pymodule.o /tmp/tmpmylg8e26/tmp/tmpmylg8e26/src.linux-x86_64-3.7/fortranobject.o /tmp/tmpmylg8e26/tmp/tmpugnkm51p.o /tmp/tmpmylg8e26/tmp/tmpmylg8e26/src.linux-x86_64-3.7/ishigami_f2py-f2pywrappers.o -L/home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/../x86_64-conda_cos6-linux-gnu/sysroot/lib/../lib -L/home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/../x86_64-conda_cos6-linux-gnu/sysroot/lib/../lib -lgfortran -o ./ishigami_f2py.cpython-37m-x86_64-linux-gnu.so\n",
+      "Removing build directory /tmp/tmpmylg8e26\n",
+      "\n"
      ]
     }
    ],
+   "source": [
+    "src = open('src/ishigami.f90', 'rb').read()\n",
+    "assert f2py.compile(src, 'ishigami_f2py', \"\", extension='.f90') == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from auxiliary import evaluate_ishigami_f2py_loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.14 ms ± 435 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "32.4 µs ± 566 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.testing.assert_almost_equal(evaluate_ishigami_f2py_loop(inputs), evaluate_ishigami(inputs))\n",
+    "\n",
+    "%timeit evaluate_ishigami_readable_loop(inputs)\n",
+    "%timeit evaluate_ishigami_f2py_loop(inputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": false
+   },
+   "source": [
+    "## Parallel processing\n",
+    "\n",
+    "We first want to get a sense how many CPU's we have available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Number of cpu : {mp.cpu_count()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### mp.Process\n",
+    "\n",
+    "* without communication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_outer = num_inner = 100\n",
+    "task_partial = partial(task_mp_no_communication, num_outer, num_inner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "processes = list()\n",
     "for which in range(3):\n",
@@ -199,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,17 +318,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.2791831519566242, 0.4691635591850568, 0.009084340128113134]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We can prepare our work.\n",
     "processes = []\n",
@@ -246,27 +343,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## mp.Pool"
+    "### mp.Pool"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... started on input parameter 0\n",
-      "... started on input parameter 1\n",
-      "... started on input parameter 2\n",
-      "... finished input parameter 0\n",
-      "... finished input parameter 2\n",
-      "... finished input parameter 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "task_partial = partial(task_mp_no_communication, num_outer, num_inner)\n",
     "\n",
@@ -279,22 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "working on main effect for input 1\n",
-      "working on main effect for input 2\n",
-      "working on main effect for input 0\n",
-      "working on total effect for input 1\n",
-      "working on total effect for input 0\n",
-      "working on total effect for input 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "task_partial = partial(task_mp_management, num_outer, num_inner)\n",
     "\n",
@@ -305,6 +376,13 @@
     "\n",
     "pool.close()\n",
     "pool.join()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distributed computing"
    ]
   }
  ],
@@ -324,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
