--- a/selected-topics/03-high-performance-python/slides/files/s-introduction.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-introduction.tex
@@ -1,10 +1,38 @@
 % !TEX root = ../main.tex
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
-\begin{frame}
+\begin{frame}\textbf{Profiling}\vspace{0.3cm}
 
-  Let's go!
+\begin{itemize}\setlength\itemsep{1em}
+    \item \textit{Premature optimization is the root of all evil.}
+    \item focus on readability
+    \item set up development environment
+    \item flesh out testing harness
+    \item tackle performance bottlenecks
+\end{itemize}
 
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
+\begin{frame}\textbf{Points of attack}\vspace{0.3cm}
+
+\begin{itemize}\setlength\itemsep{1em}
+    \item pure Python
+    \item performant libraries, SciPy Stack
+    \item compilation to faster language\vspace{0.3cm}
+    \begin{itemize}\setlength\itemsep{1em}
+        \item ahead-of-time, e.g. f2py, Cython
+        \item just-in-time, e.g. numba
+    \end{itemize}
+    \item parallel processing
+    \item distributed computing
+\end{itemize}
+
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{frame}
+	\begin{figure}[htp]\centering
+    \scalebox{0.3}{\includegraphics{fig-diminishing-returns}}
+	\end{figure}
+\end{frame}
