--- a/selected-topics/03-high-performance-python/notebook.ipynb
+++ b/selected-topics/03-high-performance-python/notebook.ipynb
@@ -49,7 +49,7 @@
     "from ishigami import compute_simulation_total_effect\n",
     "from ishigami import compute_simulation_main_effect\n",
     "from ishigami import evaluate_ishigami_readable\n",
-    "from ishigami import evaluate_ishigami\n",
+    "from ishigami import evaluate_ishigami_vectorized\n",
     "\n",
     "from auxiliary import evaluate_ishigami_readable_loop\n",
     "from auxiliary import evaluate_ishigami_numba_loop\n",
@@ -89,10 +89,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.testing.assert_almost_equal(evaluate_ishigami_readable_loop(inputs), evaluate_ishigami(inputs))\n",
+    "np.testing.assert_almost_equal(evaluate_ishigami_readable_loop(inputs), evaluate_ishigami_vectorized(inputs))\n",
     "\n",
     "%timeit evaluate_ishigami_readable_loop(inputs)\n",
-    "%timeit evaluate_ishigami(inputs)"
+    "%timeit evaluate_ishigami_vectorized(inputs)"
    ]
   },
   {
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "np.testing.assert_almost_equal(evaluate_ishigami_numba_loop(inputs), evaluate_ishigami(inputs))\n",
+    "np.testing.assert_almost_equal(evaluate_ishigami_numba_loop(inputs), evaluate_ishigami_vectorized(inputs))\n",
     "\n",
     "%timeit evaluate_ishigami_readable_loop(inputs)\n",
     "%timeit evaluate_ishigami_numba_loop(inputs)"
@@ -190,7 +190,7 @@
     }
    ],
    "source": [
-    "np.testing.assert_almost_equal(evaluate_ishigami_f2py_loop(inputs), evaluate_ishigami(inputs))\n",
+    "np.testing.assert_almost_equal(evaluate_ishigami_f2py_loop(inputs), evaluate_ishigami_vectorized(inputs))\n",
     "\n",
     "%timeit evaluate_ishigami_readable_loop(inputs)\n",
     "%timeit evaluate_ishigami_f2py_loop(inputs)"
