--- a/selected-topics/03-high-performance-python/slides/files/s-compilation.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-compilation.tex
@@ -2,24 +2,16 @@
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{center}
-		\LARGE\textbf{Parallel processing}
+		\LARGE\textbf{Compilation to faster language}
 \end{center}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
-\begin{frame}\textbf{Memory access}\vspace{0.3cm}
+\begin{frame}\textbf{Alternatives}\vspace{0.3cm}
 
-\begin{itemize}\setlength\itemsep{1em}
-    \item shared memory
-    \item distributed memory
-\end{itemize}
-
-\end{frame}
-%-------------------------------------------------------------------------------
-%-------------------------------------------------------------------------------
-\begin{frame}
-  	\begin{figure}[htp]\centering
-      \scalebox{0.3}{\includegraphics{fig-memory-access}}
-  	\end{figure}
+	\begin{itemize}\setlength\itemsep{1em}
+			\item ahead-of-time, e.g. f2py, Cython
+			\item just-in-time, e.g. numba
+	\end{itemize}
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
