--- a/selected-topics/03-high-performance-python/slides/files/s-high-performance-libraries.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-high-performance-libraries.tex
@@ -2,24 +2,16 @@
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{center}
-		\LARGE\textbf{Parallel processing}
+		\LARGE\textbf{High-performance libraries}
 \end{center}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
-\begin{frame}\textbf{Memory access}\vspace{0.3cm}
+\begin{frame}\textbf{Vectorization}\vspace{0.3cm}
 
 \begin{itemize}\setlength\itemsep{1em}
-    \item shared memory
-    \item distributed memory
+    \item Vectorization is when a CPU is provided with multiple pieces of data at a time and is able to operate on all of them at once. This sort of CPU instruction is known as SIMD (Single Instruction, Multiple Data).
 \end{itemize}
 
-\end{frame}
-%-------------------------------------------------------------------------------
-%-------------------------------------------------------------------------------
-\begin{frame}
-  	\begin{figure}[htp]\centering
-      \scalebox{0.3}{\includegraphics{fig-memory-access}}
-  	\end{figure}
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
