--- a/selected-topics/03-high-performance-python/slides/files/s-introduction.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-introduction.tex
@@ -1,6 +1,15 @@
 % !TEX root = ../main.tex
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
+\begin{frame} I draw on the material presented in:\vspace{0.3cm}
+
+\begin{itemize}\setlength\itemsep{1em}
+  \item \bibentry{Gorelick.2014}
+  \item \bibentry{Lanaro.2017}
+\end{itemize}
+
+\end{frame}%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 \begin{frame}\textbf{Profiling}\vspace{0.3cm}
 
 \begin{itemize}\setlength\itemsep{1em}
@@ -18,12 +27,8 @@
 
 \begin{itemize}\setlength\itemsep{1em}
     \item pure Python
-    \item performant libraries, SciPy Stack
-    \item compilation to faster language\vspace{0.3cm}
-    \begin{itemize}\setlength\itemsep{1em}
-        \item ahead-of-time, e.g. f2py, Cython
-        \item just-in-time, e.g. numba
-    \end{itemize}
+    \item high-performance libraries, SciPy Stack
+    \item compilation to faster language
     \item parallel processing
     \item distributed computing
 \end{itemize}
