--- a/selected-topics/03-high-performance-python/slides/main.tex
+++ b/selected-topics/03-high-performance-python/slides/main.tex
@@ -8,6 +8,10 @@
 
 \input{files/s-introduction}
 
+\input{files/s-high-performance-libraries}
+
+\input{files/s-compilation}
+
 \input{files/s-parallel-processing}
 
 \input{files/s-resources}
