fleshing out description

--- a/selected-topics/03-high-performance-python/slides/files/s-title.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-title.tex
@@ -1,6 +1,6 @@
 \input{../../../shared/header.tex}
 
-\title{High performance computing using Python}
+\title{High-performance computing using Python}
 \author{Philipp Eisenhauer}
 
 \date{}
