example mpi scripts

--- a/selected-topics/03-high-performance-python/notebook.ipynb
+++ b/selected-topics/03-high-performance-python/notebook.ipynb
@@ -9,26 +9,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "running build\n",
+      "running config_cc\n",
+      "unifing config_cc, config, build_clib, build_ext, build commands --compiler options\n",
+      "running config_fc\n",
+      "unifing config_fc, config, build_clib, build_ext, build commands --fcompiler options\n",
+      "running build_src\n",
+      "build_src\n",
+      "building extension \"ishigami_f2py\" sources\n",
+      "f2py options: []\n",
+      "f2py:> /tmp/tmpec8iet2x/src.linux-x86_64-3.7/ishigami_f2pymodule.c\n",
+      "creating /tmp/tmpec8iet2x/src.linux-x86_64-3.7\n",
+      "Reading fortran codes...\n",
+      "\tReading file '/tmp/tmpbmdh7rv6.f90' (format:free)\n",
+      "Post-processing...\n",
+      "\tBlock: ishigami_f2py\n",
+      "\t\t\tBlock: evalute_ishigami_f2py\n",
+      "Post-processing (stage 2)...\n",
+      "Building modules...\n",
+      "\tBuilding module \"ishigami_f2py\"...\n",
+      "\t\tCreating wrapper for Fortran subroutine \"evalute_ishigami_f2py\"(\"evalute_ishigami_f2py\")...\n",
+      "\t\tConstructing wrapper function \"evalute_ishigami_f2py\"...\n",
+      "\t\t  rslt = evalute_ishigami_f2py(inputs,num_evals)\n",
+      "\tWrote C/API module \"ishigami_f2py\" to file \"/tmp/tmpec8iet2x/src.linux-x86_64-3.7/ishigami_f2pymodule.c\"\n",
+      "\tFortran 77 wrappers are saved to \"/tmp/tmpec8iet2x/src.linux-x86_64-3.7/ishigami_f2py-f2pywrappers.f\"\n",
+      "  adding '/tmp/tmpec8iet2x/src.linux-x86_64-3.7/fortranobject.c' to sources.\n",
+      "  adding '/tmp/tmpec8iet2x/src.linux-x86_64-3.7' to include_dirs.\n",
+      "copying /home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib/python3.7/site-packages/numpy/f2py/src/fortranobject.c -> /tmp/tmpec8iet2x/src.linux-x86_64-3.7\n",
+      "copying /home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib/python3.7/site-packages/numpy/f2py/src/fortranobject.h -> /tmp/tmpec8iet2x/src.linux-x86_64-3.7\n",
+      "  adding '/tmp/tmpec8iet2x/src.linux-x86_64-3.7/ishigami_f2py-f2pywrappers.f' to sources.\n",
+      "build_src: building npy-pkg config files\n",
+      "running build_ext\n",
+      "customize UnixCCompiler\n",
+      "C compiler: /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-cc -Wno-unused-result -Wsign-compare -DNDEBUG -fwrapv -O2 -Wall -Wstrict-prototypes -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -pipe -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -pipe -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -DNDEBUG -D_FORTIFY_SOURCE=2 -O2 -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -fPIC\n",
+      "\n",
+      "creating /tmp/tmpfuycltnt/tmp\n",
+      "creating /tmp/tmpfuycltnt/tmp/tmpfuycltnt\n",
+      "compile options: '-MMD -MF /tmp/tmpfuycltnt/file.c.d -c'\n",
+      "x86_64-conda_cos6-linux-gnu-cc: /tmp/tmpfuycltnt/file.c\n",
+      "customize UnixCCompiler using build_ext\n",
+      "get_default_fcompiler: matching types: '['gnu95', 'intel', 'lahey', 'pg', 'absoft', 'nag', 'vast', 'compaq', 'intele', 'intelem', 'gnu', 'g95', 'pathf95', 'nagfor']'\n",
+      "customize Gnu95FCompiler\n",
+      "Found executable /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-gfortran\n",
+      "Found executable /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-ld\n",
+      "Found executable /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-ar\n",
+      "Found executable /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-ranlib\n",
+      "customize Gnu95FCompiler\n",
+      "customize Gnu95FCompiler using build_ext\n",
+      "building 'ishigami_f2py' extension\n",
+      "compiling C sources\n",
+      "C compiler: /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-cc -Wno-unused-result -Wsign-compare -DNDEBUG -fwrapv -O2 -Wall -Wstrict-prototypes -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -pipe -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -pipe -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -DNDEBUG -D_FORTIFY_SOURCE=2 -O2 -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -fPIC\n",
+      "\n",
+      "creating /tmp/tmpec8iet2x/tmp\n",
+      "creating /tmp/tmpec8iet2x/tmp/tmpec8iet2x\n",
+      "creating /tmp/tmpec8iet2x/tmp/tmpec8iet2x/src.linux-x86_64-3.7\n",
+      "compile options: '-I/tmp/tmpec8iet2x/src.linux-x86_64-3.7 -I/home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib/python3.7/site-packages/numpy/core/include -I/home/peisenha/.local/share/anaconda3/envs/teaching-talks/include/python3.7m -c'\n",
+      "x86_64-conda_cos6-linux-gnu-cc: /tmp/tmpec8iet2x/src.linux-x86_64-3.7/fortranobject.c\n",
+      "x86_64-conda_cos6-linux-gnu-cc: /tmp/tmpec8iet2x/src.linux-x86_64-3.7/ishigami_f2pymodule.c\n",
+      "compiling Fortran sources\n",
+      "Fortran f77 compiler: /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-gfortran -Wall -g -ffixed-form -fno-second-underscore -fPIC -fopenmp -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -O3 -funroll-loops\n",
+      "Fortran f90 compiler: /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-gfortran -Wall -g -fno-second-underscore -fPIC -fopenmp -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -O3 -funroll-loops\n",
+      "Fortran fix compiler: /home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-gfortran -Wall -g -ffixed-form -fno-second-underscore -Wall -g -fno-second-underscore -fPIC -fopenmp -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem /home/peisenha/.local/share/anaconda3/envs/teaching-talks/include -O3 -funroll-loops\n",
+      "compile options: '-I/tmp/tmpec8iet2x/src.linux-x86_64-3.7 -I/home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib/python3.7/site-packages/numpy/core/include -I/home/peisenha/.local/share/anaconda3/envs/teaching-talks/include/python3.7m -c'\n",
+      "x86_64-conda_cos6-linux-gnu-gfortran:f90: /tmp/tmpbmdh7rv6.f90\n",
+      "x86_64-conda_cos6-linux-gnu-gfortran:f77: /tmp/tmpec8iet2x/src.linux-x86_64-3.7/ishigami_f2py-f2pywrappers.f\n",
+      "/home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/x86_64-conda_cos6-linux-gnu-gfortran -Wall -g -Wall -g -shared -Wl,-O2 -Wl,--sort-common -Wl,--as-needed -Wl,-z,relro -Wl,-z,now -Wl,--disable-new-dtags -Wl,--gc-sections -Wl,-rpath,/home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib -Wl,-rpath-link,/home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib -L/home/peisenha/.local/share/anaconda3/envs/teaching-talks/lib /tmp/tmpec8iet2x/tmp/tmpec8iet2x/src.linux-x86_64-3.7/ishigami_f2pymodule.o /tmp/tmpec8iet2x/tmp/tmpec8iet2x/src.linux-x86_64-3.7/fortranobject.o /tmp/tmpec8iet2x/tmp/tmpbmdh7rv6.o /tmp/tmpec8iet2x/tmp/tmpec8iet2x/src.linux-x86_64-3.7/ishigami_f2py-f2pywrappers.o -L/home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/../x86_64-conda_cos6-linux-gnu/sysroot/lib/../lib -L/home/peisenha/.local/share/anaconda3/envs/teaching-talks/bin/../x86_64-conda_cos6-linux-gnu/sysroot/lib/../lib -lgfortran -o ./ishigami_f2py.cpython-37m-x86_64-linux-gnu.so\n",
+      "Removing build directory /tmp/tmpec8iet2x\n",
       "\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ishigami_f2py'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-040dbfdd5892>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mishigami\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mevaluate_ishigami\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mauxiliary\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mevaluate_ishigami_readable_loop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mauxiliary\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mevaluate_ishigami_numba_loop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mauxiliary\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtask_mp_no_communication\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/external_storage/ownCloud/office/HumanCapitalAnalysis/talks/public/selected-topics/03-high-performance-python/src/auxiliary.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0msrc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'src/ishigami.f90'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mf2py\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ishigami_f2py'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextension\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'.f90'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mishigami_f2py\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mevalute_ishigami_f2py\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ishigami_f2py'"
      ]
     }
    ],
