--- a/selected-topics/03-high-performance-python/slides/files/s-introduction.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-introduction.tex
@@ -29,7 +29,7 @@
     \item pure Python
     \item high-performance libraries, SciPy Stack
     \item compilation to faster language
-    \item parallel processing
+    \item parallel computing
     \item distributed computing
 \end{itemize}
 
