--- a/selected-topics/03-high-performance-python/slides/files/s-parallel-computing.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-parallel-computing.tex
@@ -2,7 +2,7 @@
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{center}
-		\LARGE\textbf{Parallel processing}
+		\LARGE\textbf{Parallel computing}
 \end{center}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
