--- a/selected-topics/03-high-performance-python/notebook.ipynb
+++ b/selected-topics/03-high-performance-python/notebook.ipynb
@@ -392,7 +392,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Distributed computing"
+    "## Distributed computing\n",
+    "\n",
+    "See scripts in repository."
    ]
   }
  ],
