added some hpc refs

--- a/selected-topics/03-high-performance-python/notebook.ipynb
+++ b/selected-topics/03-high-performance-python/notebook.ipynb
@@ -217,7 +217,7 @@
    "source": [
     "src = open('src/ishigami.f90', 'rb').read()\n",
     "f2py.compile(src, 'ishigami_f2py', \"\", extension='.f90')\n",
-    "#assert f2py.compile(src, 'ishigami_f2py', \"\", extension='.f90') == 0"
+    "assert f2py.compile(src, 'ishigami_f2py', \"\", extension='.f90') == 0"
    ]
   },
   {
