--- a/selected-topics/03-high-performance-python/slides/files/s-introduction.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-introduction.tex
@@ -7,8 +7,36 @@
   \item \bibentry{Gorelick.2014}
   \item \bibentry{Lanaro.2017}
 \end{itemize}
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{frame}\textbf{Basic architecture}\vspace{0.3cm}
 
-\end{frame}%-------------------------------------------------------------------------------
+\begin{itemize}\setlength\itemsep{1em}
+    \item computing units, e.g. CPU and GPU
+    \item memory units, e.g. RAM and hard disk
+    \item connections
+\end{itemize}
+
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{frame}\textbf{Main properties of computing unit}\vspace{0.3cm}
+
+\begin{itemize}\setlength\itemsep{1em}
+    \item number of operations in one cycle, e.g. vectorization
+    \item how many cycles in one second
+\end{itemize}
+
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
+\begin{frame}\textbf{Global interpreter lock}\vspace{0.3cm}
+
+\begin{quote} The GIL makes sure that a Python process can only run one instruction at a time, regardless of the number of cores it is currently using. This means that even though some Python code has access to multiple cores at a time, only one core is running a Python instruction at any given time.
+\end{quote}
+\end{frame}
+%-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\textbf{Profiling}\vspace{0.3cm}
 
