--- a/selected-topics/03-high-performance-python/slides/files/s-distributed-computing.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-distributed-computing.tex
@@ -6,6 +6,18 @@
 \end{center}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
+\begin{frame}\textbf{Challenges to parallelization}\vspace{0.3cm}
+
+\begin{itemize}\setlength\itemsep{1em}
+  \item algorithm limitations
+  \item bottlenecks
+  \item startup overhead
+	\item communication
+\end{itemize}
+
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 \begin{frame}\textbf{Communications}\vspace{0.3cm}
 
 \begin{itemize}\setlength\itemsep{1em}
