--- a/selected-topics/03-high-performance-python/slides/files/s-introduction.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-introduction.tex
@@ -31,6 +31,13 @@
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
+\begin{frame}
+	\begin{figure}[htp]\centering
+    \scalebox{0.35}{\includegraphics{fig-clockspeed}}
+	\end{figure}
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 \begin{frame}\textbf{Global interpreter lock}\vspace{0.3cm}
 
 \begin{quote} The GIL makes sure that a Python process can only run one instruction at a time, regardless of the number of cores it is currently using. This means that even though some Python code has access to multiple cores at a time, only one core is running a Python instruction at any given time.
