--- a/selected-topics/03-high-performance-python/slides/files/s-distributed-computing.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-distributed-computing.tex
@@ -18,6 +18,15 @@
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
+\begin{frame}\textbf{Frameworks}\vspace{0.3cm}
+	\begin{itemize}\setlength\itemsep{1em}
+	    \item \url{https://dask.org}
+	    \item \url{https://joblib.readthedocs.io}
+			\item \url{https://mpi4py.readthedocs.io}
+	\end{itemize}
+\end{frame}
+%-------------------------------------------------------------------------------
+%-------------------------------------------------------------------------------
 \begin{frame}\textbf{Communications}\vspace{0.3cm}
 
 \begin{itemize}\setlength\itemsep{1em}
