--- a/selected-topics/03-high-performance-python/slides/files/s-resources.tex
+++ b/selected-topics/03-high-performance-python/slides/files/s-resources.tex
@@ -11,6 +11,7 @@
 \begin{itemize}\small
 \item \bibentry{Lanaro.2017}
 \item \bibentry{Gorelick.2014}
+\item \bibentry{Hager.2011}
 \end{itemize}
 
 \end{frame}
