trying to fix the error

--- a/selected-topics/02-sensitivity-analysis/slides/files/s-resources.tex
+++ b/selected-topics/02-sensitivity-analysis/slides/files/s-resources.tex
@@ -11,6 +11,7 @@
 \begin{itemize}\small
 \item \bibentry{Saltelli.2004}
 \item \bibentry{Saltelli.2008}
+\item \bibentry{Borgonovo.2017}
 \end{itemize}
 
 \end{frame}
